# interface-reconstruction-library

./: CMakeLists.txt
cmake/Utils/: IRLAddExample.cmake
examples/: CMakeLists.txt
examples/SPH_gen/: CMakeLists.txt  SPH_gen.cpp  data_gen.h
examples/advector/: CMakeLists.txt  circle_rotation_2d.cpp  circle_rotation_2d.h  deformation_2d.cpp  deformation_2d.h  deformation_3d.cpp  deformation_3d.h  main.cpp  reconstruction_types.cpp  reconstruction_types.h  solver.cpp  solver.h
examples/interface_reconstruction/: CMakeLists.txt  main.cpp  reconstruct.cpp  reconstruct.h
examples/machine_learning/: CMakeLists.txt  test.cpp
examples/paraboloid_advector/: CMakeLists.txt  deformation_3d.cpp  model.pt  reconstruction_types.cpp  reconstruction_types.h  solver.cpp  solver.h  vof_advection.cpp
examples/plic_advector/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  data.h  deformation_3d.cpp  deformation_3d.h  main.cpp  model.pt  reconstruction_types.cpp  reconstruction_types.h  sheets.cpp  sheets.h  solver.cpp  solver.h  translation_3d.cpp  translation_3d.h  visualize.m  vof_advection.cpp  vof_advection.h
irl/: CMakeLists.txt
irl/c_interface/interface_reconstruction_methods/: c_reconstruction_interface.cpp  c_reconstruction_interface.h
irl/c_interface/paraboloid_reconstruction/: c_paraboloid.cpp
irl/data_structures/: iterator_through_bracket_operator.h
irl/fortran_interface/: f_reconstructioninterface.f90
irl/generic_cutting/: generic_cutting.tpp
irl/generic_cutting/paraboloid_intersection/: moment_contributions.h  moment_contributions.tpp  paraboloid_intersection.h  paraboloid_intersection.tpp
irl/geometry/general/: math_vector.tpp  moment_calculation_through_simplices.h  moment_calculation_through_simplices.tpp  normal.h  normal.tpp  pt.h  pt.tpp  pt_with_data.h  pt_with_data.tpp
irl/geometry/half_edge_structures/: segmented_half_edge_polyhedron.h  segmented_half_edge_polyhedron.tpp
irl/geometry/polyhedrons/: hexahedron.tpp  polyhedron_moments_calculation.h  polyhedron_moments_calculation.tpp
irl/helpers/: SFINAE_boiler_plate.h  helper.h  helper.tpp  mymath.h  mymath.tpp
irl/interface_reconstruction_methods/: elvira.cpp  elvira.h  lvira_optimization.h  lvira_optimization.tpp  progressive_distance_solver_paraboloid.tpp  reconstruction_interface.h  reconstruction_interface.tpp
irl/machine_learning_reconstruction/: CMakeLists.txt  basic_mesh.cpp  basic_mesh.h  binary_neural_network.h  data.h  data_gen.h  data_mesh.h  data_set.h  data_set.tpp  fractions.h  fractions.tpp  grad_functions.h  grad_functions.tpp  mesh.cpp  mesh.h  model.pt  model_b.pt  model_best_correct.pt  neural_network.h  spatial_moments.h  spatial_moments.tpp  trainer.h  trainer.tpp  trainer_cuda.h  trainer_cuda.tpp
irl/moments/: CMakeLists.txt  general_moments.h  general_moments.tpp  moments_type_traits.h  separated_volume_moments.h  separated_volume_moments.tpp  volume.h  volume.tpp  volume_moments.tpp
irl/optimization/: levenberg_marquardt.h  levenberg_marquardt.tpp
irl/paraboloid_reconstruction/: aligned_paraboloid.h  gradient_paraboloid.h  gradient_paraboloid.tpp  parametrized_surface.h  parametrized_surface.tpp  rational_bezier_arc.h  rational_bezier_arc.tpp
irl/parameters/: defined_types.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  optimizers_test.cpp  paraboloid_intersection_test.cpp  paraboloid_lvira_test.cpp  paraboloid_mof_test.cpp  volume_moments_test.cpp
