add_custom_target(examples_cpp)
add_custom_target(examples_fortran)
add_custom_target(examples_simple_advector)
add_custom_target(examples_simple_paraboloid_advector)
add_custom_target(examples_advector)
add_custom_target(examples_paraboloid_advector)
add_custom_target(examples_machine_learning)
add_custom_target(examples_interface_reconstruction)
add_custom_target(examples_plic_advector)
add_custom_target(examples_SPH_gen)
add_custom_target(examples_shape_error)

include(${PROJECT_SOURCE_DIR}/cmake/Utils/IRLAddExample.cmake)

add_subdirectory("./fortran")
add_subdirectory("./cpp")
add_subdirectory("./simple_advector")
add_subdirectory("./simple_paraboloid_advector")
add_subdirectory("./advector")
add_subdirectory("./paraboloid_advector")
add_subdirectory("./machine_learning")
add_subdirectory("./interface_reconstruction")
add_subdirectory("./plic_advector")
add_subdirectory("./SPH_gen")
add_subdirectory("./shape_error")
