#List of files from this directory and its subdirectores.
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/neural_network.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/binary_neural_network.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/trainer.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/trainer_cuda.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/trainer.tpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/trainer_cuda.tpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/fractions.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/fractions.tpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/grad_functions.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/grad_functions.tpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/mesh.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/mesh.cpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/data_mesh.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/data_set.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/data_set.tpp)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/spatial_moments.h)
target_sources(irl PRIVATE ${IRL_SOURCE_DIR}/machine_learning_reconstruction/spatial_moments.tpp)

find_package(Torch REQUIRED)
include_directories(SYSTEM ${TORCH_INCLUDE_DIRS})
set(CMAKE_PREFIX_PATH "/home/andrew/libtorch/share/cmake/Torch")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

find_package(MPI REQUIRED)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})